Fix progress bar visibility

--- a/ext/bg/css/settings.css
+++ b/ext/bg/css/settings.css
@@ -326,6 +326,9 @@ input[type=checkbox].storage-button-checkbox {
 .dictionary-delete-table .progress {
     margin: 0;
 }
+.dictionary-delete-table>*[hidden] {
+    display: none;
+}
 
 .error-data-show-button {
     display: inline-block;
